Fix layout and clicking of expansion/collapse of mobile menu

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -273,6 +273,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: stretch;
 
     @include breakpoint(md) {
         display: none;
@@ -281,13 +283,15 @@
     &__item {
         padding: 0;
         margin: 0;
+        display: inline-block;
+        width: 50%;
     }
 
     &__menu {
         background-color: $ship-grey;
         font-size: 17px;
         float: left;
-        width: 50%;
+        width: 100%;
         //padding-left: $col;
         padding: $baseline*2 $col;
         color: $iron-light;
@@ -302,7 +306,7 @@
         background-color: $ship-grey;
         font-size: 17px;
         float: left;
-        width: 50%;
+        width: 100%;
         //padding-left: $col;
         padding: $baseline*2 $col;
         color: $iron-light;
